syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.smartclassrooms";

// Service 1: Attendance
service Attendance {
  rpc AttendanceTracking(TrackRequest) returns (TrackResponse) {}
  rpc AttendanceReport(ReportRequest) returns (stream ReportResponse) {}
  rpc AttendanceNotification(NotificationRequest) returns (stream NotificationResponse) {}
}

message TrackRequest {
  string studentID = 1;
  string RFID = 2;
}

message TrackResponse {
  bool success = 1;
  string message = 2;
}

message ReportRequest {
}

message ReportResponse {
  repeated StudentAttendance studentAttendances = 1;
}

message StudentAttendance {
  string studentID = 1;
  string studentName = 2;
  bool present = 3;
}

message NotificationRequest {
}

message NotificationResponse {
  repeated string messages = 1;
}
